--- a/src/app/routes/account-summary/account-item/account-item.component.html
+++ b/src/app/routes/account-summary/account-item/account-item.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="account">IRA - 5200</div>
+  <div class="account">{{item.name}} - {{item.accountNumber}}</div>
   <div class="cash">
-    <div class="total">$10,050,054.01</div>
-    <div class="daily">+0.07% / $ $8,916.69</div>
+    <div class="total">{{item.balance | currency:'USD':true:'2.2-2'}}</div>
+    <div class="daily" [ngClass]='{red: item.valueChange < 0, green: item.valueChange > 0, gray: item.valueChange === 0}'>{{item.percentChange}}% / {{absolute(item.valueChange)| currency:'USD':true:'2.2-2'}}</div>
   </div>
 </div>
