--- a/src/app/routes/account-summary/account-summary.component.css
+++ b/src/app/routes/account-summary/account-summary.component.css
@@ -20,6 +20,7 @@
     float: left;
     height: 100%;
     position: relative;
+    cursor: pointer;
 }
 
 .account > div {
@@ -33,6 +34,7 @@
     float: right;
     height: 100%;
     position: relative;
+    cursor: pointer;
 }
 
 .cash > div:first-child {
@@ -83,6 +85,7 @@
     display: block;
     height: 48px;
     position: relative;
+    cursor: pointer;
 }
 
 .more {
@@ -91,5 +94,32 @@
     font-size: 15px;
     font-weight: bold;
     position: relative;
-    top: 14px;
+    top: 15px;
+}
+
+.asc {
+    position: absolute;
+    bottom: -2px;
+    padding-left: 5px;
+}
+
+.asc::after {
+    content: '^';
+}
+
+.des {
+    padding-left: 5px;
+}
+
+.des::after {
+    content: 'v';
+}
+
+.cash span {
+    left: -15px;
+}
+
+.cash .des {
+    padding-left: 0;
+    padding-right: 4px;
 }
